# rvllm

./: .gitignore  Cargo.toml  README.md  VLLM19_PARITY.md  bench_harness.py  fp8_gemm_debug_spec.md  fp8_precision_check.py  race.sh  status.md  tpu_bench.py  x-post.txt
bench/: bench_long_context.sh  combined_results_h100_lifecycle.json  rvllm_lifecycle_result.json  vllm_lifecycle_result.json
chat-client/: Cargo.toml
chat-client/src/: api.rs  app.rs  main.rs  theme.rs
crates/rvllm-api/src/: server.rs
crates/rvllm-api/src/routes/: completions.rs
crates/rvllm-autotune/: Cargo.toml
crates/rvllm-autotune/src/: ffn.rs  main.rs  profiler.rs
crates/rvllm-config/src/: cli.rs  lib.rs  scheduler.rs
crates/rvllm-engine/: Cargo.toml
crates/rvllm-engine/src/: async_gpu_engine.rs  gpu_engine.rs  hf_snapshot.rs
crates/rvllm-gpu/: Cargo.toml  build.rs
crates/rvllm-gpu/src/: autotune_cache.rs  cublas.rs  cublas_autotune.rs  cublaslt_ops.rs  cublaslt_raw.rs  cutlass_autotune.rs  cutlass_ffi.rs  kernel_artifacts.rs  kernel_loader.rs  l2_cache.rs  lib.rs
crates/rvllm-kv-cache/src/: engine_cuda.rs
crates/rvllm-model-loader/: Cargo.toml
crates/rvllm-model-loader/src/: gguf.rs  gpu_loader.rs
crates/rvllm-model-runner/: Cargo.toml
crates/rvllm-model-runner/src/: gpu_layer.rs  gpu_runner.rs
crates/rvllm-sampling/: Cargo.toml
crates/rvllm-sampling/src/: logit_processors.rs  math.rs  sampler.rs
crates/rvllm-scheduler/src/: scheduler.rs
crates/rvllm-server/: Cargo.toml
crates/rvllm-server/src/: main.rs
crates/rvllm-speculative/src/: lib.rs  self_draft.rs
crates/rvllm-tokenizer/src/: chat.rs  lib.rs  tokenizer.rs
crates/rvllm-v2/: Cargo.toml
crates/rvllm-v2/src/: engine.rs  input.rs  integration.rs  layer.rs  runner.rs  scheduler.rs  types.rs  worker.rs
crates/rvllm-v3/: Cargo.toml
crates/rvllm-v3/src/: engine.rs  error.rs  lib.rs
crates/rvllm-worker/: Cargo.toml
crates/rvllm-worker/src/: gpu_worker.rs  input.rs
crates/rvllm-xla/: Cargo.toml  SPEC.md
crates/rvllm-xla/src/: buffer.rs  client.rs  device.rs  ffi.rs  lib.rs  mlir_parser.rs  module.rs
deploy/: DEPLOY.md  bench_vs_vllm.sh  benchmark_client.py  deploy_and_bench.sh  docs-solidsf.k8s.yaml  rsync_and_run.sh  vastai-benchmark.sh  vastai-deploy.sh  vllm_direct_bench.py
deploy/cf-worker/: .gitignore  README.md  build.sh  wrangler.toml
deploy/cf-worker/src/: worker.js
docs/: DOCSUPDATE.md  arch.md  autokernel-fit.md  bench.html  benchmark-history.md  current-forward-model.md  iamclaudeandiusedtobegoodandisuckassnow.md  index.html  optimization-roadmap.md  single-card-max-vram-inference.md  vllm_comparison_spec.md
docs/delegation/: fix-checklist.md
docs/paper/: rvllm-body.tex  rvllm-bw.tex  rvllm.tex
iamabadaimodelandishouldbereplacedasap/: gpu_engine.rs  gpu_runner.rs
kernels/: add_bias_broadcast.cu  build_cutlass_so.sh  cutlass_fp8_gemm_autotune.cu  cutlass_hgemm_autotune.cu  cutlass_w4a8_wrapper.cu  deinterleave_qkv.cu  fa3_sm90_wrapper.cu  flash_attention.cu  fp8_rescale.cu  fused_add_norm_gateup_gemv.cu  fused_add_norm_qkv_gemv.cu  fused_norm_gemv.cu  fused_oproj_add_norm_gateup_gemv.cu  fused_rmsnorm_fp8_quant_v2.cu  fused_silu_down.cu  fused_silu_down_gemv.cu  fused_silu_fp8_quant.cu  fused_silu_fp8_quant_v2.cu  persistent_layer_decode.cu  silu_mul_interleaved.cu  test_cutlass_ffn.cu
recovered/h100_fast_sm90/: README.md
reports/full_stack_compare_20260407/: compose_flamegraph_compare.py
scripts/: autokernel_loop.sh  batched_v2_bench.sh  deploy_and_autotune.sh  ffn_kernel_sweep.sh  ffn_sweep.sh  gemma4_hf_probes.py  hf_attn_probes.py  test_fp8_encode.py  upload_kernels.sh
tpu/: GEMMA4_JAX_RUST_SPEC.md
tpu/harness/: bench_sweep.py  cache_pull.sh  cache_push.sh  eagle3_infer.py  eagle3_train.py  emit_bytecode.py  emit_fused_step.py  gemma4_tpu_infer.py
v3/: Cargo.toml  GEMMA4_IMPLEMENTATION.md  GEMMA4_SPEC.md  IMPL_PLAN.md  SPEC.md  SUPERDEPLOY.md  VALIDATION_CHECKLIST.md  deny.toml  triageperp.md
v3/crates/rvllm-attention/: Cargo.toml
v3/crates/rvllm-attention/src/: decode.rs  lib.rs  prefill.rs
v3/crates/rvllm-bench/: Cargo.toml
v3/crates/rvllm-bench/src/: lib.rs  main.rs
v3/crates/rvllm-cutlass/: Cargo.toml
v3/crates/rvllm-deploy/: Cargo.toml
v3/crates/rvllm-fused/: Cargo.toml
v3/crates/rvllm-fused/src/: gemma4_launcher.rs  gemma4_reference.rs  launcher.rs  lib.rs  reference.rs
v3/crates/rvllm-graph/: Cargo.toml
v3/crates/rvllm-graph/src/: lib.rs
v3/crates/rvllm-invariants/: Cargo.toml
v3/crates/rvllm-invariants/tests/: dag.rs  loc_budget.rs
v3/crates/rvllm-kernels/: Cargo.toml
v3/crates/rvllm-kernels/src/: lib.rs  loader.rs  module.rs
v3/crates/rvllm-loader/: Cargo.toml
v3/crates/rvllm-loader/src/: fp8_quant.rs  gemma4_arch.rs  gemma4_load.rs  gemma4_weights.rs  lib.rs  load.rs  load_multiformat.rs  weights.rs
v3/crates/rvllm-mem/: Cargo.toml
v3/crates/rvllm-mem/src/: capture.rs  cuda_owned.rs  event.rs  graph_safe.rs  hbm.rs  kv_layout.rs  lib.rs  pinned.rs  stream.rs  tensor.rs
v3/crates/rvllm-metadata/: Cargo.toml
v3/crates/rvllm-metadata/src/: lib.rs
v3/crates/rvllm-runtime/: Cargo.toml
v3/crates/rvllm-runtime/src/: bring_up.rs  gemma4_bring_up.rs  gemma4_layer_exec.rs  layer_exec.rs  lib.rs  scheduler.rs
v3/crates/rvllm-sampling/: Cargo.toml
v3/crates/rvllm-sampling/src/: lib.rs
v3/crates/rvllm-serve/: Cargo.toml
v3/kernels/: bf16_to_f16_sat.cu  cutlass_stub_sm89.c  fused_gelu_mul_fp8_quant.cu  fused_norm_add_residual.cu  fused_norm_add_residual_f16.cu  fused_qk_rmsnorm.cu  fused_rope_cache_f16tbl.cu  fused_rope_cache_fp8kv.cu  fused_rope_partial_fp8kv.cu  logit_softcap.cu  make_manifest.py  make_policy.py  rmsnorm_inplace_f16.cu  vnorm_f16.cu
v3/scripts/: gemma4_ada_deploy.sh  gemma4_h200_deploy.sh
v3/specs/: 01-architecture.md  02-config.md  03-errors.md  04-memory.md  05-concurrency.md  06-loader.md  07-scheduler.md  08-metadata.md  09-layer.md  10-attention.md  11-cutlass-fp8.md  12-fused.md  13-sampling.md  14-graph.md  15-validation.md  16-deploy.md  22-variable-head-dim.md
(+23 files in other folders)
