[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
