[package]
name = "rvllm-v3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "rvllm v3: clean-slate runtime with typed errors, frozen metadata, pre-captured graphs, and no fallbacks. Reuses v2 kernel bindings."

[features]
default = ["cuda"]
cuda = [
    "rvllm-gpu/cuda",
    "rvllm-gpu/cublaslt",
    "rvllm-gpu/cuda-graphs",
    "rvllm-gpu/hf-download",
    "rvllm-model-loader/cuda",
    "rvllm-v2/cuda",
    "rvllm-v2/cuda-graphs",
    "dep:cudarc",
    "dep:rvllm-autotune",
]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
rvllm-attention.workspace = true
rvllm-tokenizer.workspace = true
rvllm-model-loader.workspace = true
rvllm-v2 = { workspace = true, default-features = false }
rvllm-autotune = { workspace = true, optional = true }
cudarc = { version = "0.19", features = ["driver", "cublas", "f16", "cuda-version-from-build-system"], optional = true }
half.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "rvllm-v3-bench"
path = "src/bin/bench.rs"
required-features = ["cuda"]
