[package]
name = "rvllm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-bench: deterministic prompts, per-bucket tok/s + p50/p99 latency,
# JSON output consumed by tools/bench-gate. See v3/specs/{15,16}.md.

[[bin]]
name = "rvllm-bench"
path = "src/main.rs"

[features]
default = []
cuda = ["rvllm-runtime/cuda"]

[dependencies]
rvllm-core = { workspace = true }
rvllm-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
