[package]
name = "rvllm-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-graph: CUDA graph capture/replay. Pre-capture all buckets at engine init.
# NO lazy capture during warmup. See v3/specs/14-graph.md.

[dependencies]
rvllm-core = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
